add new color and other UI changes

--- a/frontend_templates/base.html
+++ b/frontend_templates/base.html
@@ -77,7 +77,11 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mb-12">
-            <p class="text-white footer-copyright"> Encompass Interviews &copy; 2019 <br /><div class="footer-items"><a href="/about" class="footer-item">About</a> </div> </p>
+            <p class="text-white">
+              <a href="/about" class="footer-item">About</a>
+              <a href="/about/#contact_us" class="footer-item">Contact Us</a>
+            </p>
+            <p class="footer-title">Encompass Interviews</p>
           </div>
         </div>
       </div>
