--- a/frontend_templates/info/about.html
+++ b/frontend_templates/info/about.html
@@ -43,7 +43,7 @@
         <hr />
         <div class="row">
           <div class="col-md-12">
-            <h2 class="section-header centered">Contact Us</h2>
+            <h2 class="section-header centered" id="contact_us">Contact Us</h2>
             <p class="contact-body">You can email us at <a href = "mailto: support@encompassinterviews.com">support@encompassinterviews.com</a>
             </p>
           </div>
