--- a/frontend_templates/registration/password_reset_confirm.html
+++ b/frontend_templates/registration/password_reset_confirm.html
@@ -8,26 +8,36 @@
 {% block content %}
 <center>
 <div class="form-body">
-    <form class="form-signin" method="post">
-        {% csrf_token %}
-        <img class="d-block mx-auto mb-4" src="{% static 'images/icon.png' %}" alt="" width="72" height="72">
-        <h1 class="h3 mb-3 font-weight-normal">RESET PASSWORD</h1>
-        {% if error_messages %}
-            <h3 style="color: red">Error Resetting Password</h3>
-            <center>
-            <ul style="color: red; list-style: none; padding-inline-start: 0">
-            {% for error_message in error_messages %} 
-            <li> - {{ error_message }}</li>
-            {% endfor %}
-            </ul>
-        </center>
+        {% if validlink %}    
+            {% if form.new_password1.errors or form.new_password2.errors%}
+                <div class="alert alert-danger" role="alert">
+                    Error Resetting Password Up: <br /><br />
+                    <ul>
+                        {% for error_message in form.new_password1.errors %} 
+                            <li>{{ error_message }}</li>
+                        {% endfor %}
+                        {% for error_message in form.new_password2.errors %} 
+                            <li>{{ error_message }}</li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            {% endif %}
+            <form class="form-signin" method="post">
+            {% csrf_token %}
+            <img class="d-block mx-auto mb-4" src="{% static 'images/icon.png' %}" alt="" width="72" height="72">
+            <h1 class="h3 mb-3 font-weight-normal">RESET PASSWORD</h1>
+            <label for="password" class="sr-only">New Password</label>
+            <input type="password" id="new_password1" name="new_password1" class="form-control" placeholder="Password" required><br />
+            <label for="password2" class="sr-only">Confirm New Password</label>
+            <input type="password" id="new_password2" name="new_password2" class="form-control" placeholder="Confirm Password" required> <br>
+            <button class="btn btn-lg btn-primary btn-block form-block" type="submit">Reset Password</button>
+        {% else %}
+            <div class="alert alert-danger" role="alert">
+                    <h2>The password reset link is invalid. Try resetting your password <a href="/users/password_reset/">here.</a></h2>
+            </div>
         {% endif %}
-        <label for="password" class="sr-only">New Password</label>
-        <input type="password" id="new_password1" name="new_password1" class="form-control" placeholder="Password" required><br />
-        <label for="password2" class="sr-only">Confirm New Password</label>
-        <input type="password" id="new_password2" name="new_password2" class="form-control" placeholder="Confirm Password" required> <br>
-        <button class="btn btn-lg btn-primary btn-block form-block" type="submit">Reset Password</button>
     </form>
 </div>
 </center>
+
 {% endblock %}
