--- a/frontend_templates/interview_q/observe_answerers.html
+++ b/frontend_templates/interview_q/observe_answerers.html
@@ -17,7 +17,7 @@
                         <thead>
                             <tr>
                             <th scope="col">#</th>
-                            <th scope="col">Name Of User</th>
+                            <th scope="col">Interviewee Name</th>
                             <th scope="col">User Email</th>
                             <th scope="col">Observe Link</th>
                             </tr>
