--- a/frontend_templates/interview_q_instance/browse.html
+++ b/frontend_templates/interview_q_instance/browse.html
@@ -68,9 +68,9 @@
                         {% endfor %}
                     </div>
                 </div>
-                <div class="row">
+                <div class="row last-part">
                     <div class="col-md-12 centered">
-                     <p class="browse-text">Want to practice?</p>
+                     <p class="browse-text">Want to answer more questions?</p>
                      <a href="/interview_questions/open" class="btn btn-primary btn-lg open-q-btn">Browse Open Questions</a>
                     </div>
                 </div>
