--- a/frontend_templates/info/account.html
+++ b/frontend_templates/info/account.html
@@ -20,10 +20,13 @@
          <label for="last_name">Last Name</label>
          <input type="text" id="last_name" name="last_name" class="form-control" value="{{ user.last_name }}"><br />
       </div>
+      
+      <button class="btn btn-lg btn-primary btn-block form-block top-padded" type="submit">Update Account</button><br />
+
       <div class="form-group">
-            <label for="email">Email</label>
-            <input type="text" id="email" name="email" class="form-control" value="{{ user.email }}" readonly><br />
-      </div>
+          <label for="email">Email</label>
+          <input type="text" id="email" name="email" class="form-control" value="{{ user.email }}" readonly><br />
+       </div>
 
       {% if user.is_from_company %}
       <div class="form-group">
@@ -33,11 +36,9 @@
             <label for="account_status">Membership Expiration</label>
             <input type="text" id="account_status" name="account_status" class="form-control" value="{{ terminated_time }}" readonly><br />
       </div>
-      <a href="/users/enroll" class="action-link">Change or Renew Membership Status</a><br /><br/><br/>
-      {% else %}
+      <a href="/users/enroll" class="action-link">Change or Renew Membership Status</a><br /><br/>
       {% endif %}
-      <a href="/users/password_reset" class="action-link">Forgot password?</a>
-      <button class="btn btn-lg btn-primary btn-block form-block top-padded" type="submit">Update Account</button>
+      <a href="/users/password_reset" class="action-link">Reset password</a>
     </form>
 </div>
 </center>
