--- a/frontend_templates/interview_q/all.html
+++ b/frontend_templates/interview_q/all.html
@@ -18,6 +18,7 @@
                             {% for interview_q in interview_questions %}
                                 <div class="col-md-12 centered">
                                     <div class="question-box">
+                                        <hr />
                                         <p class="question-card-title">{{ forloop.counter }}. {{ interview_q.name }}:</p>
                                         <a href="/interview_questions/question/{{interview_q.id}}/send/" class="btn btn-outline-primary question-card-button">Send</a>
                                         <a href="/interview_questions/question/{{interview_q.id}}/submissions/" class="btn btn-outline-primary question-card-button">View Submissions</a>
@@ -25,7 +26,9 @@
                                         <a href="/interview_questions/question/{{interview_q.id}}/try/" class="btn btn-outline-primary question-card-button">Try</a>
                                         <a href="/interview_questions/question/{{interview_q.id}}/edit/" class="btn btn-outline-primary question-card-button">Edit</a>
                                         <a href="/interview_questions/question/{{interview_q.id}}/delete/" class="btn btn-outline-primary question-card-button">Delete</a>
+                                        {% if forloop.counter == interview_questions|length %}
                                         <hr />
+                                        {% endif %}
                                     </div>
                                 </div>
                             {% endfor %}
@@ -33,12 +36,11 @@
                   {% endif %}
                     
                     <div class="create-section">
-                        <h2 class="create-section-title">Create a New Interview Question: </h2><br />
                         {% if can_user_make_questions %}
                             {% if can_make_new_questions %}
-                            <a href="/interview_questions/create" class="btn btn-lg btn-outline-primary create-section-button">Create</a>
+                            <a href="/interview_questions/create" class="btn btn-lg btn-outline-primary create-section-button">Create a New Interview Question</a>
                             {% else %}
-                            <p class="create-section-text">You have reached the maximum number of questions. You can upgrade your plan <a href="/users/enroll">here</a></p>
+                            <p class="create-section-text enlarged-text">You have reached the maximum number of questions. You can upgrade your plan <a href="/users/enroll">here</a></p>
                             {% endif %}
                         {% else %}
                             <p class="create-section-text">You must have creator status to create a question. You can become a creator <a href="/users/enroll">here</a></p><br />
