--- a/frontend_templates/interview_q/submissions.html
+++ b/frontend_templates/interview_q/submissions.html
@@ -17,7 +17,7 @@
                         <thead>
                             <tr>
                             <th scope="col">#</th>
-                            <th scope="col">User Name</th>
+                            <th scope="col">Interviewee Name</th>
                             <th scope="col">Time Submitted (UTC)</th>
                             <th scope="col">Submission Link</th>
                             </tr>
